--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="home" class="fullscreen-section">
     <section>
         <div class="welcome-section">
-            <h1>Welcome to Cambridge Cricket Club. We are located at 100 Wentworth Ave, Cambridge, ON</h1>
+            <h1>Welcome to Cambridge Cricket Club. We are located at Victoria Park,100 Wentworth Ave, Cambridge, Ontario</h1>
             <img src="./logo img/logo.jpeg" alt="Club Logo" class="logo">
             <img src="./gallery_images/1.jpg" alt="Club Picture" class="club-picture">
           </div>
@@ -72,6 +72,41 @@
           <div class="about-content">
             <h2>About Us</h2>
             <p class="about-paragraph">We are a prestigious cricket club that has been an active participant in various Cricket Leagues since 1852. Currently, we participate in the Hamilton and District Cricket League. With a rich history and a strong tradition of excellence, we strive to uphold the values of sportsmanship, teamwork, and camaraderie. Our dedicated players and passionate supporters make us a force to be reckoned with on the cricket field. The season for Cambridge Cricket Club runs from May to October, during which we engage in thrilling matches, fierce rivalries, and unforgettable moments. Join us as we continue to write our chapter in the storied legacy of cricket.</p>    
+            <p>
+              Cambridge Cricket Club is a prestigious club participating in the Hamilton and District Cricket League. Established in 1852, we have a rich history in the sport and are dedicated to promoting cricket in the community.
+            </p>
+            <p>
+              Our club offers various membership options to cater to players of all skill levels and age groups. Join us today to be part of our cricketing family. Below is a table with membership details:
+            </p>
+            <table class="membership-table">
+              <thead>
+                <tr>
+                  <th>Membership Type</th>
+                  <th>Fee</th>
+                  <th>Benefits</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Full Membership</td>
+                  <td>$250/year</td>
+                  <td>Access to all club facilities, participation in league matches</td>
+                </tr>
+                <tr>
+                  <td>Part-Time Membership</td>
+                  <td>$125/year</td>
+                  <td>Access to social events and practice sessions. Limit of 6 * 40 over games. Full time members have priority selection in league matches.</td>
+                </tr>
+                <!-- Add more membership options if needed -->
+              </tbody>
+            </table>
+            <p>
+              Follow our games and stay updated with the latest scores and updates. You can find the game links and live streaming on our website. Join us in supporting the team!
+            </p>
+            <p>
+              Follow the games on: <a href="https://cricheroes.in/club/48/cambridge-cricket-club">cricheroes.in</a>
+            </p>
+        
           </div>
         </div>
       </section>
