--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <div class="about-section">
           <div class="about-content">
             <h2>About Us</h2>
-            <p class="about-paragraph">We are a prestigious cricket club that has been an active participant in various Cricket Leagues since 1852. Currently, we participate in the Hamilton and District Cricket League. With a rich history and a strong tradition of excellence, we strive to uphold the values of sportsmanship, teamwork, and camaraderie. Our dedicated players and passionate supporters make us a force to be reckoned with on the cricket field. The season for Cambridge Cricket Club runs from May to October, during which we engage in thrilling matches, fierce rivalries, and unforgettable moments. Join us as we continue to write our chapter in the storied legacy of cricket.</p>    
+            <p class="about-paragraph">We are a prestigious cricket club that has been an active participant in various Cricket Leagues since 1852. With a rich history and a strong tradition of excellence, we strive to uphold the values of sportsmanship, teamwork, and camaraderie. Our dedicated players and passionate supporters make us a force to be reckoned with on the cricket field. The season for Cambridge Cricket Club runs from May to October, during which we engage in thrilling matches, fierce rivalries, and unforgettable moments. Join us as we continue to write our chapter in the storied legacy of cricket.</p>    
             <p>
-              Cambridge Cricket Club is a prestigious club participating in the Hamilton and District Cricket League. Established in 1852, we have a rich history in the sport and are dedicated to promoting cricket in the community.
+              Cambridge Cricket Club participates in the Hamilton and District Cricket League. We have a rich history in the sport and are dedicated to promoting cricket in the community.
             </p>
             <p>
               Our club offers various membership options to cater to players of all skill levels and age groups. Join us today to be part of our cricketing family. Below is a table with membership details:
