added more pics

--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
         <div class="slide">
           <img src="./gallery_images/team-pic.jpg" alt="Image 3">
         </div>
+        <div class="slide">
+          <img src="./gallery_images/10.jpg" alt="Image 3">
+        </div>
+        <div class="slide">
+          <img src="./gallery_images/11.jpg" alt="Image 3">
+        </div>
+        <div class="slide">
+          <img src="./gallery_images/12.jpeg" alt="Image 3">
+        </div>
+        <div class="slide">
+          <img src="./gallery_images/13.jpeg" alt="Image 3">
+        </div>
+        <div class="slide">
+          <img src="./gallery_images/14.jpeg" alt="Image 3">
+        </div>
+        <div class="slide">
+          <img src="./gallery_images/15.jpeg" alt="Image 3">
+        </div>
+        <div class="slide">
+          <img src="./gallery_images/16.jpeg" alt="Image 3">
+        </div>
         
         
         <!-- Custom left and right arrows -->
