made slideshow mobile responsive

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
           <img src="./gallery_images/16.jpeg" alt="Image 3">
         </div>
         
+        <button id="pauseButton">Pause</button>
+        <button id="playButton">Play</button>
         
         <!-- Custom left and right arrows -->
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
